--- a/PersistenceContentProviderSample/app/build.gradle
+++ b/PersistenceContentProviderSample/app/build.gradle
@@ -15,10 +15,12 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.android.contentprovidersample"
         minSdkVersion 14
@@ -52,12 +54,16 @@ dependencies {
     })
 
     // Support Libraries
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
 
     // App Toolkit
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha4"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha4"
+    kapt "android.arch.lifecycle:compiler:1.0.0-alpha4"
+    kapt "android.arch.persistence.room:compiler:1.0.0-alpha4"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
